fix_image_links: wrap images with anchors

--- a/static/themes/atlantis/screen.scss
+++ b/static/themes/atlantis/screen.scss
@@ -156,16 +156,17 @@ a {
   &.img {
     background: transparent;
   }
-  span.img & {
-    border: $border;
-    float: right;
-    text-align: center;
-    color: black;
-    background: $main_bg;
-    padding: 0.2em;
-    img {
-      display: block;
-    }
+}
+
+span.img {
+  border: $border;
+  float: right;
+  text-align: center;
+  color: black;
+  background: $main_bg;
+  padding: 0.2em;
+  img {
+    display: block;
   }
 }
 
